libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_simple_ident.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Simple identifier without bound
expression: T
info:
  kind: Err
---
T
 ^
invalid generic constraint
