libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_snake_case_ident.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Snake case identifier
expression: snake_case
info:
  kind: Err
---
snake_case
          ^
invalid generic constraint
