libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_struct_bound.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Struct type as bound
expression: "T: (key: K, value: V)"
info:
  kind: Ok
---
GenericConstraint#4294967040@13 (name: T)
  Type#4294967040@12
    TypeKind (Struct)
      StructType#4294967040@12
        StructField#4294967040@6 (name: key)
          Type#4294967040@5
            TypeKind (Path)
              Path#4294967040@5 (rooted: false)
                PathSegment#4294967040@4 (name: K)
        StructField#4294967040@11 (name: value)
          Type#4294967040@10
            TypeKind (Path)
              Path#4294967040@10 (rooted: false)
                PathSegment#4294967040@9 (name: V)
