libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_tuple_bound.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Tuple type as bound
expression: "T: (Int, String)"
info:
  kind: Ok
---
GenericConstraint#4294967040@15 (name: T)
  Type#4294967040@14
    TypeKind (Tuple)
      TupleType#4294967040@14
        TupleField#4294967040@5
          Type#4294967040@5
            TypeKind (Path)
              Path#4294967040@5 (rooted: false)
                PathSegment#4294967040@4 (name: Int)
        TupleField#4294967040@13
          Type#4294967040@12
            TypeKind (Path)
              Path#4294967040@12 (rooted: false)
                PathSegment#4294967040@11 (name: String)
