libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_union_bound.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Union type as bound
expression: "T: A | B"
info:
  kind: Ok
---
GenericConstraint#4294967040@9 (name: T)
  Type#4294967040@8
    TypeKind (Union)
      UnionType#4294967040@8
        Type#4294967040@4
          TypeKind (Path)
            Path#4294967040@4 (rooted: false)
              PathSegment#4294967040@3 (name: A)
        Type#4294967040@7
          TypeKind (Path)
            Path#4294967040@7 (rooted: false)
              PathSegment#4294967040@6 (name: B)
