libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__empty_generics.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Empty generics
expression: "<>"
info:
  kind: Err
---
<>
  ^
