libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__infer_type.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Infer type as generic argument
expression: _
info:
  kind: Ok
---
GenericArgument#4294967040@2
  Type#4294967040@1
    TypeKind (Infer)
