libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__invalid_bound.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Invalid bound specification
expression: "<T: >"
info:
  kind: Err
---
<T: >
     ^
invalid generics
expected `>`
